@@ -83,12 +83,12 @@ public:
 
 protected:
 
-  // add calibration proxies for DataV* classes
+  // add calibration proxies for CsPad::ElementV* classes
   void addProxyV1(const PSEvt::EventKey& key, Event& evt, Env& env);
   void addProxyV2(const PSEvt::EventKey& key, Event& evt, Env& env);
 
-  // add calibration proxies for MiniElementV* classes
-  void addProxyMini(const PSEvt::EventKey& key, Event& evt, Env& env);
+  // add calibration proxies for CsPad2x2::ElementV* classes
+  void addProxy2x2(const PSEvt::EventKey& key, Event& evt, Env& env);
 
 private:
 
