@@ -23,12 +23,14 @@
 // Collaborating Class Headers --
 //-------------------------------
 #include "MsgLogger/MsgLogger.h"
+#include "pdscalibdata/CsPad2x2PedestalsV1.h"
+#include "pdscalibdata/CsPad2x2PixelStatusV1.h"
 #include "pdscalibdata/CsPadCommonModeSubV1.h"
 #include "pdscalibdata/CsPadFilterV1.h"
-#include "pdscalibdata/CsPadMiniPedestalsV1.h"
-#include "pdscalibdata/CsPadMiniPixelStatusV1.h"
 #include "pdscalibdata/CsPadPedestalsV1.h"
 #include "pdscalibdata/CsPadPixelStatusV1.h"
+#include "pdsdata/xtc/DetInfo.hh"
+#include "PSCalib/CalibFileFinder.h"
 
 //-----------------------------------------------------------------------
 // Local Macros, Typedefs, Structures, Unions and Forward Declarations --
@@ -37,6 +39,17 @@
 namespace {
 
   const char logger[] = "CalibDataProxy";
+
+  /// Return calibration class (like CsPad::CalibV1) for given source
+  std::string source2class(const Pds::Src& src)
+  {
+    if (src.level() == Pds::Level::Source) {
+      const Pds::DetInfo& info = static_cast<const Pds::DetInfo&>(src);
+      if (info.device() == Pds::DetInfo::Cspad2x2) return "CsPad2x2::ConfigV1";
+      if (info.device() == Pds::DetInfo::Cspad) return "CsPad::ConfigV1";
+    }
+    return std::string();
+  }
 
 }
 
@@ -50,10 +63,9 @@ namespace cspad_mod {
 // Constructors --
 //----------------
 template <typename T>
-CalibDataProxy<T>::CalibDataProxy (const std::string& calibDir,
-    const std::string& calibClass, const std::string& calibType, int run)
+CalibDataProxy<T>::CalibDataProxy (const std::string& calibDir, const std::string& calibType, int run)
   : PSEvt::Proxy<T>()
-  , m_finder(calibDir, calibClass)
+  , m_calibDir(calibDir)
   , m_calibType(calibType)
   , m_run(run)
   , m_data()
@@ -83,11 +95,17 @@ CalibDataProxy<T>::getTypedImpl(PSEvt::ProxyDictI* dict,
   // make a new one
   boost::shared_ptr<T> ptr;
 
-  std::string calibFileName = m_finder.findCalibFile(source, m_calibType, m_run);
-  if (not calibFileName.empty()) {
-    MsgLog(logger, trace, "CalibDataProxy: found calibration file " << calibFileName);
-    // make new instance that will read data from file
-    ptr.reset(new T(calibFileName));
+  const std::string& cclass = ::source2class(source);
+  if (not cclass.empty()) {
+
+    PSCalib::CalibFileFinder finder(m_calibDir, cclass);
+    std::string calibFileName = finder.findCalibFile(source, m_calibType, m_run);
+    if (not calibFileName.empty()) {
+      MsgLog(logger, trace, "CalibDataProxy: found calibration file " << calibFileName);
+      // make new instance that will read data from file
+      ptr.reset(new T(calibFileName));
+    }
+
   }
 
   // store it in cache
@@ -96,11 +114,12 @@ CalibDataProxy<T>::getTypedImpl(PSEvt::ProxyDictI* dict,
   return ptr;
 }
 
+
 // explicit instantiation
+template class CalibDataProxy<pdscalibdata::CsPad2x2PedestalsV1>;
+template class CalibDataProxy<pdscalibdata::CsPad2x2PixelStatusV1>;
 template class CalibDataProxy<pdscalibdata::CsPadCommonModeSubV1>;
 template class CalibDataProxy<pdscalibdata::CsPadFilterV1>;
-template class CalibDataProxy<pdscalibdata::CsPadMiniPedestalsV1>;
-template class CalibDataProxy<pdscalibdata::CsPadMiniPixelStatusV1>;
 template class CalibDataProxy<pdscalibdata::CsPadPedestalsV1>;
 template class CalibDataProxy<pdscalibdata::CsPadPixelStatusV1>;
 
